src/test/deca/context/invalid/provided/class42.java
class A{
    protected int x;
}
class B {
    int y;
    A a;
    void getA(){
        
        this.a.x=20;
    }
}
{
}